# ryvex

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  IDEAS.md  LICENSE  README.md  ROADMAP.md  TEST.md  flake.nix  script.sh
.github/workflows/: ci.yaml  release.yaml
logs/: log.txt
proc-macros/: Cargo.toml
proc-macros/src/: lib.rs
ryvex-app/: Cargo.toml
ryvex-app/src/: args.rs  commands.rs  compositor.rs  error.rs  keymap.rs  lib.rs  logger.rs  macros.rs  main.rs  startup.rs  terminal_guard.rs
ryvex-app/src/editor/: document.rs  editor.rs  error.rs  mod.rs
ryvex-app/src/ui/: commandline.rs  editorview.rs  loggingline.rs  mod.rs  statusline.rs
ryvex-core/: Cargo.toml
ryvex-core/src/: lib.rs  motion.rs  piece_table.rs
ryvex-core/src/logging/: chain.rs  macros.rs  mod.rs  record.rs  ring.rs  sink.rs  spinlock.rs
ryvex-os/: Cargo.toml
ryvex-os/src/: error.rs  lib.rs
ryvex-os/src/termios/: mod.rs
ryvex-os/src/termios/unix/: ffi.rs  mod.rs
ryvex-std/: Cargo.toml
ryvex-std/src/: error.rs  fs.rs  lib.rs
ryvex-target/: Cargo.toml
ryvex-target/src/: key.rs  lib.rs  macros.rs
ryvex-target/src/impl/: mod.rs
ryvex-target/src/impl/std/: env.rs  fs.rs  mod.rs  process.rs
ryvex-target/src/impl/unix/: fd.rs  ffi.rs  mod.rs  termios.rs
ryvex-target/src/impl/unix/term/: command.rs  fd.rs  mod.rs  source.rs  termios.rs
ryvex-target/src/impl/windows/: command.rs  console.rs  cursor.rs  ffi.rs  handle.rs  mod.rs
ryvex-target/src/impl/windows/term/: command.rs  console.rs  handle.rs  mod.rs  source.rs  terminal.rs
ryvex-target/src/std/: env.rs  error.rs  fs.rs  mod.rs  path.rs  process.rs  write.rs
ryvex-target/src/term/: console.rs  event.rs  mod.rs
ryvex-target/src/term/command/: cursor.rs  mod.rs  terminal.rs
ryvex-term/: Cargo.toml
ryvex-term/src/: command.rs  cursor.rs  cusror.rs  error.rs  event.rs  key.rs  lib.rs  macros.rs  terminal.rs
ryvex-term/src/event/: mod.rs  source.rs  stream.rs
ryvex-term/src/event/source/: unix.rs  windows.rs
ryvex-term/src/sys/: mod.rs
ryvex-term/src/sys/unix/: fd.rs  ffi.rs  mod.rs  termios.rs
ryvex-term/src/sys/windows/: fd.rs  ffi.rs  mod.rs  termios.rs
ryvex-tui/: Cargo.toml
ryvex-tui/src/: buffer.rs  error.rs  lib.rs  terminal.rs
ryvex-tui/src/backend/: mod.rs  term.rs  test.rs
ryvex-ui/: Cargo.toml
ryvex-ui/src/: graphics.rs  lib.rs
scripts/: build.sh
src/: configuration.rs  cursor.rs  error.rs  file_access.rs  keybind.rs  lib.rs  main.rs  open_file.rs  startup.rs  state.rs  telemetry.rs  terminal_guard.rs
src/actions/: default_actions.rs  error.rs  mod.rs
src/core/: buffer.rs  command.rs  cursor.rs  error.rs  mod.rs  open_file.rs  state.rs
src/core/actions/: action.rs  default_actions.rs  error.rs  mod.rs
src/core/keys/: keybind.rs  keycode.rs  mod.rs
src/core/layers/: layer.rs
src/core/ui/: error.rs  message_overlay.rs  mod.rs  overlay.rs
src/core/ui/command_overlay/: command_overlay.rs  mod.rs
src/core/ui/message_overlay/: decorative_message_overlay.rs  message_overlay.rs  mod.rs  primitive_message_overlay.rs
src/keys/: key.rs  keybind.rs  keycode.rs
src/layers/: layer.rs
src/new/: buffer.rs  iter.rs  keybind.rs  mod.rs  motion.rs
src/simulation/: simulation.rs
