[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Flokkq <webcla21@htl-kaindorf.at>"]

[workspace]
resolver = "2"
members = ["ryvex-app", "proc-macros", "ryvex-ui", "ryvex-tui", "ryvex-target"]

default-members = [
  "ryvex-app"
]

[profile.dev]
incremental = true
opt-level = 2

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3

[workspace.dependencies]
log = "0.4.21"
