[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Flokkq <webcla21@htl-kaindorf.at>"]

[workspace]
resolver = "2"
members = ["ryvex-app", "proc-macros", "ryvex-ui", "ryvex-tui", "ryvex-target"]

default-members = [
  "ryvex-app"
]

[workspace.dependencies]
ryvex-target = { path = "ryvex-target", default-features = false }
ryvex-ui     = { path = "ryvex-ui",     default-features = false }
ryvex-tui    = { path = "ryvex-tui",    default-features = false }
proc-macros  = { path = "proc-macros",  default-features = false }

[profile.dev]
panic = "unwind"
incremental = true
opt-level = 2

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
panic = "abort"
