[package]
name = "ryvex-app"
description = "The revolutionary text editor in rust"
include = ["src/**/*"]
default-run = "ryvex"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "ryvex"
path = "src/main.rs"

[dependencies]
ryvex-target = { path = "../ryvex-target"}
ryvex-std = { path = "../ryvex-std" }
ryvex-ui = { path = "../ryvex-ui" }
ryvex-tui = { path = "../ryvex-tui" }
proc-macros = { path = "../proc-macros" }
log.workspace = true
env_logger = "=0.10.2"
