[package]
name = "ryvex-app"
description = "The revolutionary text editor in rust"
include = ["src/**/*"]
default-run = "ryvex"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "ryvex"
path = "src/main.rs"

[features]
default = ["std"]
std = [
  "ryvex-target/std",
  "ryvex-ui/std",
  "ryvex-tui/std",
  "ryvex-core/std",
]

[dependencies]
ryvex-target.workspace = true
ryvex-ui.workspace = true
ryvex-tui.workspace = true
ryvex-core.workspace = true
